--- a/ML Society/Backpropagation/backpropagation.ipynb
+++ b/ML Society/Backpropagation/backpropagation.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import random\n",
     "from sklearn import datasets\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import copy"
    ]
   },
   {
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +75,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_error(y_out, d_out):\n",
+    "    e = 0\n",
+    "    for i,j in list(zip(y_out, d_out)):\n",
+    "        e+=(i-j)**2\n",
+    "    return e/2\n",
+    "\n",
+    "def diff_first_principles(e2, e1, w2, w1):\n",
+    "    return (e2-e1)/(w2-w1)\n",
+    "\n",
+    "def backpropagate_newton_raphson(w, x, y, d_out):\n",
+    "    # Backpropagation\n",
+    "    # Initial setup\n",
+    "    w_inter = copy.deepcopy(w)\n",
+    "    x_temp = copy.deepcopy(x)\n",
+    "    y_temp = copy.deepcopy(y)\n",
+    "\n",
+    "    # Generic backpropagate\n",
+    "    err1 = calculate_error(y[-1], d_out)\n",
+    "    const1 = 6\n",
+    "    for k in range(len(w)):\n",
+    "        for i in range(w[k].shape[0]):\n",
+    "            for j in range(w[k].shape[1]):\n",
+    "                w1 = w[k][i][j]\n",
+    "                w[k][i][j]+=const1*(10**-3)\n",
+    "                w2 = w[k][i][j]\n",
+    "                feed_forward(w, x_temp, y_temp)\n",
+    "                w[k][i][j]-=const1*(10**-3)\n",
+    "                err2 = calculate_error(y_temp[-1], d_out)\n",
+    "                diff = diff_first_principles(err2, err1, w2, w1)\n",
+    "                w_inter[k][i][j] = w[k][i][j] - 0.01*diff\n",
+    "\n",
+    "    return w_inter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +128,7 @@
        "       [5. , 3.6, 1.4]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,28 +160,28 @@
     "        '''\n",
     "        feed_forward(w,x,y)\n",
     "        d_out = [1,0] if out==0 else [0,1]\n",
-    "        w = backpropagate(w,x,y,d_out)\n",
+    "        w = backpropagate_newton_raphson(w,x,y,d_out)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([[-1.5587451 ,  0.68955177,  0.13508201,  1.29776239],\n",
-       "        [ 1.0866639 ,  0.32646727,  0.64767569, -0.27965854],\n",
-       "        [-0.03681665, -0.16395978,  1.06571191, -2.29590967]]),\n",
-       " array([[-6.17860163e-03,  7.80906781e-01],\n",
-       "        [-1.40306791e+00,  5.24758018e-04],\n",
-       "        [ 7.53916154e-01,  5.61914563e-01],\n",
-       "        [ 1.51558040e+00, -1.38827149e+00]])]"
+       "[array([[ 2.74014155,  0.48182297,  0.85159042, -2.37548682],\n",
+       "        [-0.11244756,  0.68265062,  1.47539148, -0.02783873],\n",
+       "        [-0.5577782 ,  1.48909804, -3.39481363, -0.99777046]]),\n",
+       " array([[-1.26110064,  2.64315334],\n",
+       "        [-1.3268846 , -0.0530288 ],\n",
+       "        [ 5.32290618, -5.34083099],\n",
+       "        [ 0.07530041,  0.24649119]])]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,24 +192,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.67497077, 0.33633429])"
+       "array([0.93842789, 0.06070772])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_pred = [iris['data'][13,:3],np.zeros(4),np.zeros(2)]\n",
+    "x_pred = [np.array(iris['data'][33,:3]),np.zeros(4),np.zeros(2)]\n",
     "y_pred = x_pred\n",
-    "s_out = [1,0]\n",
     "feed_forward(w,x_pred,y_pred)\n",
     "y_pred[2]"
    ]
