--- a/Term 2/Intro to AI/Lab Material/Lab4.ipynb
+++ b/Term 2/Intro to AI/Lab Material/Lab4.ipynb
@@ -39,7 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'e', 'd', 'c', 'k', 'a', 'h', 'g'}\n"
+      "{'h', 'd', 'g', 'a', 'e', 'c', 'k'}\n"
      ]
     }
    ],
@@ -57,12 +57,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{('k', 'l', 'm'): 'i', ('i', 'l', 'j'): 'q', ('c', 'd', 'e'): 'b', ('a', 'b'): 'q', ('l', 'n', 'o', 'p'): 'q', ('c', 'h'): 'r', ('r', 'j', 'm'): 's', ('f', 'h'): 'b', ('g',): 'f'}\n"
+      "{('k', 'l', 'm'): 'i', ('i', 'l', 'j'): 'q', ('c', 'd', 'e'): 'b', ('a', 'b'): 'q', ('l', 'n', 'o', 'p'): 'q', ('c', 'h'): 'r', ('r', 'j', 'm'): 's', ('f', 'h'): 'b', ('g',): 'f'}\n",
+      "{'i': [('k', 'l', 'm')], 'q': [('i', 'l', 'j'), ('a', 'b'), ('l', 'n', 'o', 'p')], 'b': [('c', 'd', 'e'), ('f', 'h')], 'r': [('c', 'h')], 's': [('r', 'j', 'm')], 'f': [('g',)]}\n"
      ]
     }
    ],
    "source": [
-    "rule_base = {tuple(rule_line.split('=>')[0].split('+')):rule_line.split('=>')[1] for rule_line in lines[1:-1]}\n",
+    "rule_base_rev = {tuple(rule_line.split('=>')[0].split('+')):rule_line.split('=>')[1] for rule_line in lines[1:-1]}\n",
+    "rule_base = {val:[] for val in rule_base_rev.values()}\n",
+    "for key,val in rule_base_rev.items():\n",
+    "    rule_base[val].append(key)\n",
+    "print(rule_base_rev)\n",
     "print(rule_base)"
    ]
   },
@@ -88,17 +93,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'e', 'd', 'c', 'h', 'a', 'k', 'g'}\n",
-      "{'e', 'h', 'r', 'g', 'f', 'q', 'd', 'b', 'c', 'k', 'a'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "'''\n",
     "# Forward Chaining\n",
     "def forward_chaining(knowledge_base, rule_base):\n",
     "    new_knowledge_base = knowledge_base.copy()\n",
@@ -113,23 +110,18 @@
     "        prev_len = len(new_knowledge_base)\n",
     "    print(new_knowledge_base)\n",
     "\n",
-    "forward_chaining(knowledge_base, rule_base)"
+    "forward_chaining(knowledge_base, rule_base)\n",
+    "'''\n",
+    "pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True [(('c', 'd', 'e'), 'b'), (('a', 'b'), 'q')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "'''\n",
     "# Backward chaining\n",
     "def backward_chaining(knowledge_base, rule_base, goal_var):\n",
     "    if goal_var in knowledge_base:\n",
@@ -149,15 +141,95 @@
     "\n",
     "paths = []\n",
     "initial_goal_state = goal_var\n",
-    "print(backward_chaining(knowledge_base.copy(), rule_base, goal_var), paths[-1])"
+    "print(backward_chaining(knowledge_base.copy(), rule_base, goal_var), paths[-1])\n",
+    "'''\n",
+    "pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial Knowledge: {'h', 'd', 'g', 'a', 'e', 'c', 'k'}\n",
+      "Final Knowledge: {'h', 'q', 'f', 'd', 'g', 'a', 'e', 'b', 'r', 'c', 'k'}\n",
+      "Knowledge Added: {'f', 'b', 'r', 'q'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Forward Chaining\n",
+    "def forward_chaining(knowledge_base, rule_base):\n",
+    "    new_knowledge_base = knowledge_base.copy()\n",
+    "    prev_len = len(new_knowledge_base)\n",
+    "    while True:\n",
+    "        for conclusion,premises_list in rule_base.items():\n",
+    "            for premises in premises_list:\n",
+    "                if all([premise in new_knowledge_base for premise in premises]) :\n",
+    "                    new_knowledge_base.update(conclusion)\n",
+    "        if prev_len == len(new_knowledge_base):\n",
+    "            break\n",
+    "        prev_len = len(new_knowledge_base)\n",
+    "    return new_knowledge_base\n",
+    "\n",
+    "print('Initial Knowledge:', knowledge_base)\n",
+    "print('Final Knowledge:', forward_chaining(knowledge_base, rule_base))\n",
+    "print('Knowledge Added:', forward_chaining(knowledge_base, rule_base) - knowledge_base)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proved Path: ['a', 'c', 'd', 'e', \"('c', 'd', 'e')=>b\", \"('a', 'b')=>q\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Backward chaining\n",
+    "def backward_chaining(knowledge_base, rule_base, goal_var):\n",
+    "    # Globals to trace path\n",
+    "    global paths\n",
+    "    global initial_goal_state\n",
+    "    \n",
+    "    if goal_var in knowledge_base:\n",
+    "        if len(paths)==0:\n",
+    "            paths.append([goal_var])\n",
+    "        else:\n",
+    "            paths[-1].append(goal_var)\n",
+    "        return True\n",
+    "    \n",
+    "    if goal_var in rule_base:\n",
+    "        for premises in rule_base[goal_var]:\n",
+    "            if goal_var==initial_goal_state:\n",
+    "                paths.append([])\n",
+    "            all_satisfied=True\n",
+    "            for premise in premises:\n",
+    "                if not backward_chaining(knowledge_base, rule_base, premise):\n",
+    "                    all_satisfied=False\n",
+    "                    break\n",
+    "            if all_satisfied:\n",
+    "                knowledge_base.update(goal_var)\n",
+    "                paths[-1].append(str(premises)+'=>'+goal_var)\n",
+    "                return True\n",
+    "                \n",
+    "    return False\n",
+    "\n",
+    "paths = []\n",
+    "initial_goal_state = goal_var\n",
+    "res = backward_chaining(knowledge_base.copy(), rule_base, goal_var)\n",
+    "if res:\n",
+    "    print('Proved Path:', paths[-1])"
+   ]
   }
  ],
  "metadata": {
