--- a/Term 4/PADS/SQL/Kishlay_SQL_Assignment.ipynb
+++ b/Term 4/PADS/SQL/Kishlay_SQL_Assignment.ipynb
@@ -124,17 +124,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "c7cff114",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sqlite3"
+    "import sqlite3\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "ccb84e13",
    "metadata": {},
    "outputs": [],
@@ -154,17 +155,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "ab19b1d3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x192314f4f40>"
+       "<sqlite3.Cursor at 0x192314f5040>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "d7d78dbf",
    "metadata": {},
    "outputs": [
@@ -193,19 +194,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1, 'John', 'Computer Science', 3.5, '01-01-2022'), (2, 'Jane', 'Physics', 3.8, '01-02-2022'), (3, 'Bob', 'Engineering', 3.0, '01-03-2022'), (4, 'Samantha', 'Physics', 3.9, '01-04-2022'), (5, 'James', 'Engineering', 3.7, '01-05-2022'), (6, 'Emily', 'Computer Science', 3.6, '01-06-2022'), (7, 'Michael', 'Computer Science', 3.2, '01-07-2022'), (8, 'Jessica', 'Engineering', 3.8, '01-08-2022'), (9, 'Jacob', 'Physics', 3.4, '01-09-2022'), (10, 'Ashley', 'Physics', 3.9, '01-10-2022')]\n"
+      "   student_id      name             major  gpa enrollment_date\n",
+      "0           1      John  Computer Science  3.5      01-01-2022\n",
+      "1           2      Jane           Physics  3.8      01-02-2022\n",
+      "2           3       Bob       Engineering  3.0      01-03-2022\n",
+      "3           4  Samantha           Physics  3.9      01-04-2022\n",
+      "4           5     James       Engineering  3.7      01-05-2022\n",
+      "5           6     Emily  Computer Science  3.6      01-06-2022\n",
+      "6           7   Michael  Computer Science  3.2      01-07-2022\n",
+      "7           8   Jessica       Engineering  3.8      01-08-2022\n",
+      "8           9     Jacob           Physics  3.4      01-09-2022\n",
+      "9          10    Ashley           Physics  3.9      01-10-2022\n"
      ]
     }
    ],
    "source": [
     "# 1.\n",
     "res = cur.execute('''SELECT * FROM students;''')\n",
-    "print(res.fetchall())"
+    "print(pd.DataFrame(res.fetchall(), columns=['student_id','name','major','gpa', 'enrollment_date']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "id": "2c8eb03f",
    "metadata": {},
    "outputs": [
@@ -213,19 +224,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1, 'John', 'Computer Science', 3.5, '01-01-2022'), (6, 'Emily', 'Computer Science', 3.6, '01-06-2022'), (7, 'Michael', 'Computer Science', 3.2, '01-07-2022')]\n"
+      "   student_id     name             major  gpa enrollment_date\n",
+      "0           1     John  Computer Science  3.5      01-01-2022\n",
+      "1           6    Emily  Computer Science  3.6      01-06-2022\n",
+      "2           7  Michael  Computer Science  3.2      01-07-2022\n"
      ]
     }
    ],
    "source": [
     "# 2.\n",
     "res = cur.execute('''SELECT * FROM students where major='Computer Science';''')\n",
-    "print(res.fetchall())"
+    "print(pd.DataFrame(res.fetchall(), columns=['student_id','name','major','gpa', 'enrollment_date']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "id": "4cc8a7b6",
    "metadata": {},
    "outputs": [
@@ -233,19 +247,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Physics',), ('Engineering',), ('Computer Science',)]\n"
+      "              major\n",
+      "0           Physics\n",
+      "1       Engineering\n",
+      "2  Computer Science\n"
      ]
     }
    ],
    "source": [
     "# 3.\n",
     "res = cur.execute('''SELECT DISTINCT major FROM students ORDER by major DESC;''')\n",
-    "print(res.fetchall())"
+    "print(pd.DataFrame(res.fetchall(), columns=['major']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "id": "b12dbc84",
    "metadata": {},
    "outputs": [
@@ -253,14 +270,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(7, 'Michael', 'Computer Science', 3.2, '01-07-2022'), (6, 'Emily', 'Computer Science', 3.6, '01-06-2022'), (5, 'James', 'Engineering', 3.7, '01-05-2022'), (2, 'Jane', 'Physics', 3.8, '01-02-2022'), (8, 'Jessica', 'Engineering', 3.8, '01-08-2022'), (10, 'Ashley', 'Physics', 3.9, '01-10-2022')]\n"
+      "   student_id     name             major  gpa enrollment_date\n",
+      "0           7  Michael  Computer Science  3.2      01-07-2022\n",
+      "1           6    Emily  Computer Science  3.6      01-06-2022\n",
+      "2           5    James       Engineering  3.7      01-05-2022\n",
+      "3           2     Jane           Physics  3.8      01-02-2022\n",
+      "4           8  Jessica       Engineering  3.8      01-08-2022\n",
+      "5          10   Ashley           Physics  3.9      01-10-2022\n"
      ]
     }
    ],
    "source": [
     "# 4.\n",
     "res = cur.execute('''SELECT * FROM students where name like '%e%' ORDER by gpa ASC;''')\n",
-    "print(res.fetchall())"
+    "print(pd.DataFrame(res.fetchall(), columns=['student_id','name','major','gpa', 'enrollment_date']))"
    ]
   },
   {
@@ -274,17 +297,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "d31ae95b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x192314f4f40>"
+       "<sqlite3.Cursor at 0x192314f5040>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "id": "638539cb",
    "metadata": {},
    "outputs": [
@@ -313,19 +336,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(4,)]\n"
+      "Courses Count = 4\n"
      ]
     }
    ],
    "source": [
     "# 1.\n",
     "res = cur.execute('''SELECT COUNT (DISTINCT course_id) FROM courses;''')\n",
-    "print(res.fetchall())"
+    "print(\"Courses Count =\", res.fetchall()[0][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "id": "eb92ef63",
    "metadata": {},
    "outputs": [
@@ -333,7 +356,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(2,)]\n"
+      "Students in Computer Science taking Python Programming = 2\n"
      ]
     }
    ],
@@ -341,12 +364,12 @@
     "# 2.\n",
     "res = cur.execute('''SELECT COUNT(*) FROM students JOIN courses ON students.student_id=courses.student_id \n",
     "WHERE major='Computer Science' AND course_name='Python programming';''')\n",
-    "print(res.fetchall())"
+    "print(\"Students in Computer Science taking Python Programming =\", res.fetchall()[0][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "id": "17d6c442",
    "metadata": {},
    "outputs": [
@@ -354,7 +377,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('John', 'Computer Science', 3.5, 'Python programming', 'A'), ('Samantha', 'Physics', 3.9, 'Python programming', 'A'), ('Jane', 'Physics', 3.8, 'Data Structures', 'B'), ('Bob', 'Engineering', 3.0, 'Database Systems', 'B'), ('Jessica', 'Engineering', 3.8, 'Database Systems', 'A'), ('Jacob', 'Physics', 3.4, 'Quantum Mechanics', 'A')]\n"
+      "       name             major  gpa         course_name grade\n",
+      "0      John  Computer Science  3.5  Python programming     A\n",
+      "1  Samantha           Physics  3.9  Python programming     A\n",
+      "2      Jane           Physics  3.8     Data Structures     B\n",
+      "3       Bob       Engineering  3.0    Database Systems     B\n",
+      "4   Jessica       Engineering  3.8    Database Systems     A\n",
+      "5     Jacob           Physics  3.4   Quantum Mechanics     A\n"
      ]
     }
    ],
@@ -362,7 +391,7 @@
     "# 3.\n",
     "res = cur.execute('''SELECT name, major, gpa, course_name, grade FROM students JOIN courses ON students.student_id=courses.student_id \n",
     "WHERE grade < 'C';''')\n",
-    "print(res.fetchall())"
+    "print(pd.DataFrame(res.fetchall(), columns=['name','major','gpa','course_name', 'grade']))"
    ]
   },
   {
@@ -376,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "id": "4f7e3014",
    "metadata": {},
    "outputs": [
@@ -384,19 +413,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(3.5800000000000005,)]\n"
+      "Avg GPA =  3.5800000000000005\n"
      ]
     }
    ],
    "source": [
     "# 1.\n",
     "res = cur.execute('''SELECT AVG(gpa) FROM students;''')\n",
-    "print(res.fetchall())"
+    "print('Avg GPA = ',res.fetchall()[0][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "id": "0d97fc2e",
    "metadata": {},
    "outputs": [
@@ -404,19 +433,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(4, 'Physics', 3.9), (10, 'Physics', 3.9)]\n"
+      "   student_id    major  gpa\n",
+      "0           4  Physics  3.9\n",
+      "1          10  Physics  3.9\n"
      ]
     }
    ],
    "source": [
     "# 2.\n",
     "res = cur.execute('''SELECT student_id,major,gpa FROM students WHERE gpa=(SELECT MAX(gpa) FROM students);''')\n",
-    "print(res.fetchall())"
+    "print(pd.DataFrame(res.fetchall(), columns = ['student_id', 'major', 'gpa']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "id": "cee68d18",
    "metadata": {},
    "outputs": [
@@ -424,19 +455,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(3, 'Engineering', 3.0)]\n"
+      "   student_id        major  gpa\n",
+      "0           3  Engineering  3.0\n"
      ]
     }
    ],
    "source": [
     "# 3.\n",
     "res = cur.execute('''SELECT student_id,major,gpa FROM students WHERE gpa=(SELECT MIN(gpa) FROM students);''')\n",
-    "print(res.fetchall())"
+    "print(pd.DataFrame(res.fetchall(), columns = ['student_id', 'major', 'gpa']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "id": "4e821ed5",
    "metadata": {},
    "outputs": [
@@ -444,19 +476,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(2, 'Physics', 3.8), (4, 'Physics', 3.9), (5, 'Engineering', 3.7), (8, 'Engineering', 3.8), (10, 'Physics', 3.9)]\n"
+      "   student_id        major  gpa\n",
+      "0           2      Physics  3.8\n",
+      "1           4      Physics  3.9\n",
+      "2           5  Engineering  3.7\n",
+      "3           8  Engineering  3.8\n",
+      "4          10      Physics  3.9\n"
      ]
     }
    ],
    "source": [
     "# 4.\n",
     "res = cur.execute('''SELECT student_id,major,gpa FROM students WHERE major in ('Physics','Engineering') AND gpa>3.6;''')\n",
-    "print(res.fetchall())"
+    "print(pd.DataFrame(res.fetchall(), columns = ['student_id', 'major', 'gpa']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "id": "cf7c6c6f",
    "metadata": {},
    "outputs": [
@@ -464,19 +501,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Computer Science', 3.4333333333333336), ('Engineering', 3.5), ('Physics', 3.75)]\n"
+      "              major  AVG(gpa)\n",
+      "0  Computer Science  3.433333\n",
+      "1       Engineering  3.500000\n",
+      "2           Physics  3.750000\n"
      ]
     }
    ],
    "source": [
     "# 5.\n",
     "res = cur.execute('''SELECT major,AVG(gpa) FROM students GROUP BY major;''')\n",
-    "print(res.fetchall())"
+    "print(pd.DataFrame(res.fetchall(), columns = ['major', 'AVG(gpa)']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "id": "981b0edd",
    "metadata": {},
    "outputs": [
@@ -484,14 +524,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(6, 'Emily', 'Computer Science', 3.6, '01-06-2022'), (1, 'John', 'Computer Science', 3.5, '01-01-2022'), (8, 'Jessica', 'Engineering', 3.8, '01-08-2022'), (5, 'James', 'Engineering', 3.7, '01-05-2022'), (4, 'Samantha', 'Physics', 3.9, '01-04-2022'), (10, 'Ashley', 'Physics', 3.9, '01-10-2022')]\n"
+      "   student_id      name             major  gpa enrollment_date\n",
+      "0           6     Emily  Computer Science  3.6      01-06-2022\n",
+      "1           1      John  Computer Science  3.5      01-01-2022\n",
+      "2           8   Jessica       Engineering  3.8      01-08-2022\n",
+      "3           5     James       Engineering  3.7      01-05-2022\n",
+      "4           4  Samantha           Physics  3.9      01-04-2022\n",
+      "5          10    Ashley           Physics  3.9      01-10-2022\n"
      ]
     }
    ],
    "source": [
     "# 6.\n",
     "res = cur.execute('''SELECT student_id,name,major,gpa,enrollment_date FROM (SELECT *,ROW_NUMBER() OVER (PARTITION BY major ORDER BY major ASC,gpa DESC) AS top2 FROM students) WHERE top2<=2;''')\n",
-    "print(res.fetchall())"
+    "print(pd.DataFrame(res.fetchall(), columns = ['student_id', 'name', 'major', 'gpa', 'enrollment_date']))"
    ]
   },
   {
